# car_data_visualisation_app

./: .gitignore  database.py  main.py  pyproject.toml
models/: Advertisement.py  CarModel.py  Price.py  Sales.py  Trim.py  __init__.py
seeders/: seed.py
